--- a/pages/static/css/base.css
+++ b/pages/static/css/base.css
@@ -1,48 +1,107 @@
-body {
-    background-color: rgb(43, 255, 0);
-    font-family: 'Courier New', Courier, monospace;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+body{
+    font-size: 80%;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 0.15em;
 
 }
 
-#name {
-    margin-left: 150px;
-    margin-top: 200px;
-    margin-bottom: 10px;
-    margin-right: 200px;
+.page {
+    margin: 10px auto 10px auto;
+    max-width: 940px;
+    min-width: 720px;
+    padding: 20px;
+}
+
+.logo {
+    margin: 10px auto 25px auto;
+    width: 150px;
+}
+
+ul {
+    width: 570px;
+    padding: 15px;
+    margin: 0px auto 0px auto;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    text-align: center;
+}
+
+li {
+    display: inline;
+    margin: 0px 3px;
+}
+
+p {
+    text-align: center;
+    width: 600px;
+    margin: 20px auto 20px auto;
+    font-weight: normal;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+    text-transform: uppercase;
+    padding: 6px 18px 5px 18px;
+}
+
+a:hover{
+    color: rgb(0, 0, 255);
+}
+
+
+.product{
+    margin: 20px auto 20px auto;
+    text-align: center;
+}
+
+.product img{
+    width: 200px;
+    height: 150px;
+    text-align: center;
+}
+
+.product h2{
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+
+}
+
+.about h1{
+    font-family: 'Raleway', sans-serif;
+}
+.about{
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+
+}
+ 
+.contact h3{
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
     text-transform: uppercase;
 }
 
-#surname {
-    margin-left: 150px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    margin-right: 200px;
+.contact {
+    margin: 20px auto 20px auto;
     text-transform: uppercase;
+    
 }
 
-#age {
-    margin-left: 150px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    margin-right: 200px;
-    text-transform: uppercase;
+.repair{
+    margin: 20px auto 20px auto;
+    text-align: center;
 }
 
-#hobby {
-    margin-left: 150px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    margin-right: 200px;
+.repair img{
+    width: 200px;
+    height: 150px;
+    text-align: center;
+}
+
+.repair h2{
+    font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
 
-
-}
-img{
-    width: 230px;
-    height: 230px;
-    border-radius: 20px;
-    margin-left: 550px;
-    margin-top: -500px;
-    margin-bottom: 20px;
-    margin-right: 200px;
 }
